correction mobile

--- a/styles.css
+++ b/styles.css
@@ -255,7 +255,6 @@ footer {
     /* Global */
     body {
         font-size: 1rem; /* Ajuste la taille de police pour les petits écrans */
-        padding: 10px; /* Ajoute du padding global pour éviter les bords collés */
     }
 
     header {
